🔨 updated UI with IP geoloc and logging improvement
